--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "precommit": "yarn static-ci && yarn test-ci",
     "components": "dotenv yarn -- workspace @weather-widget/components",
+    "frontend": "dotenv yarn -- workspace @weather-widget/frontend",
     "foreach-tsconfig": "glob-exec --foreach 'packages/*/tsconfig.json'",
     "lint": "tslint --project .",
     "static-ci": "yarn typecheck && yarn lint && yarn prettier-ci",
